tests/demo_app_with_routes_and_ingress/ingress-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-world
  namespace: ingressworld
spec:
  rules:
  - host: ingress.nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-world
            port:
              number: 8090
